Added fixes after review